--- a/src/app/picture-page/picture-page.component.html
+++ b/src/app/picture-page/picture-page.component.html
@@ -1,3 +1,3 @@
 <div id="sect1"class="container">       
-    <h1 id="center">Coming Soon...</h1>  
+    <h1 id="center">Coming Soon... <br>Hosted by Luis Reyes Madrid</h1>  
 </div> 
