--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<H1>I hAVE NO CLUE WHAT'S GOING ON... MAYBE i NEED A BREAK</H1>
+<H1>I at least have some clue of how CICD works for static pages in AWS... sigh</H1>
