--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<H1>I at least have some clue of how CICD works for static pages in AWS... sigh</H1>
+<H1>I at least have some clue of how CICD works for static pages in AWS</H1>
+<H1>Hello Nikhil and Mahesh!!!</H1>
 <h2>Testing 1,2,3.. Hosted by Luis Reyes Madrid</h2>
 <h3>The inner machinations of my mind are an enigma</h3>
