Testing Angular Material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
-<H1>I at least have some clue of how CICD works for static pages in AWS</H1>
-<H1>Hello Nikhil and Mahesh!!!</H1>
-<h2>Testing 1,2,3.. Hosted by Luis Reyes Madrid</h2>
-<h3>The inner machinations of my mind are an enigma</h3>
+<p>
+    <mat-toolbar color="primary">
+      <mat-toolbar-row>
+        <span>Estelina's Through the Years</span>
+        <span class="example-spacer"></span>
+        <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+          <mat-icon>menu</mat-icon>
+        </button>
+      </mat-toolbar-row>
+    </mat-toolbar>
+</p>
