Maybe one day the suffering will end

--- a/src/app/picture-page/picture-page.component.html
+++ b/src/app/picture-page/picture-page.component.html
@@ -1,3 +1,4 @@
+<div>
 <section class="cd-horizontal-timeline">
 	<div class="timeline">
 		<div class="events-wrapper">
@@ -118,3 +119,4 @@
 		</ol>
 	</div> <!-- .events-content -->
 </section>
+</div>
